[MathML] The double bar vertical delimiter does not stretch properly https://bugs.webkit.org/show_bug.cgi?id=123543

Reviewed by Chris Fleizach.

Source/WebCore:

* rendering/mathml/RenderMathMLOperator.cpp: Add stretching support for U+2225, which
is another version of the vertical bar.

LayoutTests:

* mathml/presentation/mo-stretch.html: Add &DoubleVerticalBar; to this test,
which covers the other version of the vertical bar.
* platform/gtk/mathml/presentation/mo-stretch-expected.png:
* platform/gtk/mathml/presentation/mo-stretch-expected.txt:

Canonical link: https://commits.webkit.org/142503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159219 268f45cc-cd09-0410-ab3c-d52691b4dbfc